<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF909090"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_user"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/img_avatar"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_user"
        android:layout_below="@+id/txt_name"
        android:layout_toEndOf="@+id/img_avatar"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@+id/img_avatar"
        android:layout_below="@+id/txt_age"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/this_is_description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_avatar"
        android:layout_below="@+id/txt_description"
        android:orientation="horizontal"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/txt_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"/>

        <TextView
            android:id="@+id/txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/following"/>


    </LinearLayout>

</RelativeLayout>